[gd_scene load_steps=11 format=3 uid="uid://qhgxctcams6s"]

[ext_resource type="Texture2D" uid="uid://cfyu3jvc6tmic" path="res://assets/textures/bg.png" id="1_h7ya7"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_xw3m2"]
[ext_resource type="PackedScene" uid="uid://c6ikmq2g2i5xw" path="res://scenes/hud.tscn" id="2_w6vwh"]
[ext_resource type="PackedScene" uid="uid://dnnsbac3tkfpr" path="res://scenes/player.tscn" id="2_xbmtj"]
[ext_resource type="PackedScene" uid="uid://dkopihcpcs7um" path="res://scenes/enemy_spawner.tscn" id="3_h1ty0"]
[ext_resource type="AudioStream" uid="uid://ch7qdifwopvh7" path="res://assets/audio/hit.wav" id="6_263qs"]
[ext_resource type="AudioStream" uid="uid://dt37nx0pyd2l1" path="res://assets/audio/explode.wav" id="7_efxok"]
[ext_resource type="AudioStream" uid="uid://qewdm7ln4afo" path="res://assets/audio/game_over.wav" id="9_8307x"]
[ext_resource type="AudioStream" uid="uid://mkt5o7384m8j" path="res://assets/audio/music.ogg" id="9_j30yf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0jbj"]
size = Vector2(82, 758)

[node name="Game" type="Node2D"]
script = ExtResource("1_xw3m2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_w6vwh")]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1292.0
offset_bottom = 736.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h7ya7")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_xbmtj")]
position = Vector2(57, 352)

[node name="EnemySpawner" parent="." instance=ExtResource("3_h1ty0")]

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-184, 371)
shape = SubResource("RectangleShape2D_g0jbj")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_263qs")

[node name="PlayerDamagedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_efxok")

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_8307x")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_j30yf")
volume_db = -20.0
autoplay = true

[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
[connection signal="enemy_spawn" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawn"]
[connection signal="path_enemy_spawn" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawn"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
